syntax = "proto3";

package calculator;

option java_package = "com.proto.calc";
option java_multiple_files = true;

message Operands{
     int32 num1 = 1;
     int32 num2 = 2;
}

message CalculatorRequest{
    Operands operands = 1;
}

message CalculatorResponse{
     int32 result = 1;
}

message CalculatorStreamRequest{
    int32 num1 = 1;
}

message CalculatorStreamResponse{
     int32 result = 1;
}

message LongCalculatorRequest{
    double num =1;
}

message LongCalculatorResponse{
    double result =1;
}

message MaximumRequest{
   int32 num =1;
}

message MaximumResponse{
   int32 response = 1;
}

message SquareRootRequest{
  int32 number = 1;
}

message SquareRootResponse{
   double squareRoot  = 1;
}

service CalculatorService{
     rpc Sum(CalculatorRequest) returns (CalculatorResponse) {};
     rpc PrimeDecomposition(CalculatorStreamRequest) returns ( stream CalculatorStreamResponse){};
     rpc CalculateAverage(stream LongCalculatorRequest) returns (LongCalculatorResponse) {};
     rpc FindMaximum(stream MaximumRequest) returns (stream MaximumResponse){};
     rpc FindSquareRoot(SquareRootRequest) returns (SquareRootResponse){};
}